--- a/src/index.html
+++ b/src/index.html
@@ -14,10 +14,10 @@
     <meta name="author"    content="Ivan Vladimir Meza Ruiz"/>
 	<meta name="google-site-verification" content="FvrBkRaSz5bNzbDlyIvUT2_wRuKK7-e21cLHzaggJNI" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/homepage.css"/>
 	<link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="css/homepage.css"/>
+	<link rel="stylesheet" title="Androidstudio" href="css/androidstudio.css">
     <link rel="icon" type="image/png" href="/images/ivanicon.png" />
-
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/KaTeX/0.5.1/katex.min.js"></script>
 	<script src="//d3js.org/d3.v3.min.js"></script>
